see source code and the LICENSE file


2. Changelog
------------
This is a non-exhaustive (but still near complete) changelog for
Joomla! 1.6, 1.7 and 2.5, including alpha and beta versions.
Our thanks to all those people who've contributed bug reports and
code fixes.

Legend:

* -> Security Fix
# -> Issue Fix
$ -> Language fix or change
+ -> Addition
^ -> Change
- -> Removed
! -> Note

29-Apr-2013 Jean-Marie Simonet
 # [#30723] Can't upload file after update from 2.5.9 to 2.5.10. Thanks Mark Dexter

-------------------- 2.5.11 Stable Release 26-April-2013] ------------------

26-Apr-2013 Mark Dexter
 # [#30681] Error in Database tab in Extension Manager. Thanks Amirol Ahmad.
 # [#30702] Only titles display in featured/blogged views when hide intro text is selected.
 # [#30725] Exception thrown for empty path. Thanks Elin Waring.

26-Apr-2013 Jean-Marie Simonet
 # [#30717] Memcached driver breaks Joomla configuration page. Thanks Ofer Cohen

-------------------- 2.5.10 Stable Release 24-April-2013] ------------------

23-Apr-2013 Mark Dexter
 # [#30652] Commit for issue 29916 broke Smart Search indexing. Thanks Don Gilbert.

14-Apr-2013 Mark Dexter
 # [#30506] Joomla update system erases entire site if downloaded zip package is broken. Thanks Aliaksei Kanstantsinau.
 # [#30288] Module Prepare Paramater breaks Cache + Browser Cache + Application Rendering time. Thanks Parth Lawate. 

14-Apr-2013 Michael Babker
 # [#29240] Undefined property: JSite::$registeredurlparams.  Thanks Mark Stanton

12-Apr-2013 Jean-Marie Simonet
 # [#30538] Joomla Update Options button displays even if you don't have permission. Thanks Mark Dexter
 # [#30537] Menus with default view in URL and sub-tasks are missing in other defined attributes and do not display correctly in menu type input in backend. Thanks Beat
 #+ [#30139] Memcache handler Issue (Not working at all). Thanks Ofer Cohen and sajal suni